WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278638
[IFC][Cleanup] Never mutate box geometry outside of the formatting context subtree
https://bugs.webkit.org/show_bug.cgi?id=278638
Summary
[IFC][Cleanup] Never mutate box geometry outside of the formatting context su...
alan
Reported
2024-08-25 19:56:10 PDT
ssia
Attachments
Patch
(2.54 KB, patch)
2024-08-25 19:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.54 KB, patch)
2024-08-26 07:23 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(2.52 KB, patch)
2024-08-26 07:56 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-25 19:57:52 PDT
Created
attachment 472290
[details]
Patch
alan
Comment 2
2024-08-26 07:23:57 PDT
Created
attachment 472294
[details]
Patch
alan
Comment 3
2024-08-26 07:56:05 PDT
Created
attachment 472296
[details]
[fast-cq]Patch
EWS
Comment 4
2024-08-26 08:38:19 PDT
Committed
282735@main
(0803febcb085): <
https://commits.webkit.org/282735@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472296
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-08-26 08:39:16 PDT
<
rdar://problem/134703557
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug