[IFC][Cleanup] Never mutate box geometry outside of the formatting context subtree https://bugs.webkit.org/show_bug.cgi?id=278638

Reviewed by Antti Koivisto.

Remove optional escape reason as there's no valid reason to ever modify geometry outside of IFC.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::geometryForBox):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:

Canonical link: https://commits.webkit.org/282735@main